<resources>
    <string name="app_name">커피매니저</string>
    <string name="app_version">1.0.0</string>
    <string name="designer_name">Designer : Gong.SoHyunn</string>
    <string name="developer1_name">Developer : Lee Oh Hyoung</string>
    <string name="developer2_name">Developer : Won Jong Woon</string>

    <string name="fragment_main_saved_my_caffeine_info_not_found">(마이카페인을 설정 해보세요)</string>
    <string name="fragment_history_today_register_search_text">검색</string>

    <!-- 음료량에 따라서 출력 되는 메세지 -->
    <string name="fragment_home_content_none">오늘 마신 음료를\n기록하면 카페인 양을\n확인할 수 있어요!</string>
    <string name="fragment_home_content_low">잘 하고 있어요!\n카페인 중독에서 벗어나\n건강을 되찾으세요</string>
    <string name="fragment_home_content_middle">이정도가 적당해요!\n오늘은 여기까지 마시고\n건강을 지키세요</string>
    <string name="fragment_home_content_high">더 이상은 위험해요!\n카페인 부작용이 건강을\n위협하고 있어요</string>

    <string name="fragment_statistics_title">통계</string>
    <string name="fragment_statistics_not_implemented">준비 중인 기능입니다</string>
    <string name="fragment_statistics_show_analysis_button_text">분석보기</string>
    <string name="fragment_statistics_graph_sub_title_daily">일별 섭취량</string>
    <string name="fragment_statistics_graph_sub_title_weekly">주별 섭취량</string>
    <string name="fragment_statistics_graph_sub_title_monthly">월별 섭취량</string>
    <string name="fragment_statistics_category_success">성공</string>
    <string name="fragment_statistics_category_exceed">초과</string>
    <string name="fragment_statistics_category_user_average">사용자평균</string>

    <string name="activity_history_today_register_toolbar_title">입력</string>
    <string name="activity_history_today_register_delete_all">비우기</string>

    <string name="main_home_fragment_personal_recommend_caffeine">%smg</string>
    <string name="history_caffeine_intake">%smg</string>

    <string name="main_settings_personal_weight_form">%skg</string>
    <string name="main_settings_personal_recommend_form">%smg</string>
    <string name="main_settings_personal_adult_recommend_hint_form">체중 x 6</string>
    <string name="main_settings_login_button_text">로그인</string>
    <string name="main_settings_logout_button_text">로그아웃</string>

    <string name="activity_sign_in_title_email">이메일</string>
    <string name="activity_sign_in_title_id">아이디</string>
    <string name="activity_sign_in_title_password">비밀번호</string>
    <string name="activity_sign_in_find_password_description"><u>비밀번호를 잊으셨나요?</u></string>
    <string name="activity_sign_in_not_yet_user_description">아직 회원이 아니신가요?</string>
    <string name="activity_sign_in_sign_in_description">가입하기</string>

    <string name="activity_sign_up_title_toolbar">회원가입</string>
    <string name="activity_sign_up_title_id">아이디 입력</string>
    <string name="activity_sign_up_title_email">이메일</string>
    <string name="activity_sign_up_title_password">비밀번호</string>
    <string name="activity_sign_up_title_password_edit_text_hint">●●●●●●●●</string>
    <string name="activity_sign_up_information_gathering_description"><u>정보수집에 동의하십니까? (필수)</u></string>
    <string name="activity_sign_up_alarm_setting_description"><u>알람 설정에 동의하십니까? (선택)</u></string>
    <string name="activity_sign_up_next_button_text">다음</string>
    <string name="activity_sign_up_done_button_text">회원가입</string>
    <string name="activity_sign_up_password_hint">비밀번호 힌트</string>
    <string name="activity_sign_up_password_edit_text_hint">질문 선택</string>
    <string name="activity_sign_up_password_edit_text_answer_hint">답</string>

    <string name="dialog_history_register_franchise_not_found">찾으시는 카페가 없으신가요?</string>
    <string name="dialog_history_register_franchise_choice_custom_description">아래의 음료 중 선택하여 입력해주세요.</string>
    <string name="dialog_history_register_warning_confirm">입력하기</string>
    <string name="dialog_history_register_warning_cancel">돌아가기</string>
    <string name="dialog_warning_title">카페인의 위험성</string>
    <string name="dialog_warning_description">카페인 과잉 섭취시\n혈압상승을 일으키며\n지속적일 경우\n동맥경화를 유발합니다!</string>
    <string name="dialog_history_delete_description">해당 히스토리를 삭제 하시겠습니까?</string>
    <string name="dialog_recent_drink_menu_name">메뉴 :</string>
    <string name="dialog_recent_drink_franchise_name">프랜차이즈 :</string>
    <string name="dialog_recent_drink_caffeine">카페인 :</string>
    <string name="dialog_recent_drink_caffeine_form">%smg</string>
    <string name="dialog_recent_drink_cancel_button">돌아가기</string>
    <string name="dialog_recent_drink_confirm_button">추가하기</string>

    <!-- 권장 섭취량 초과했을때 경고 다이얼로그 메세지 -->
    <string name="dialog_exceed_recommend_warning_title">권장 섭취량 초과</string>
    <string name="dialog_exceed_recommend_warning_description">권장 섭취량을 초과 했습니다.\n카페인 과잉 섭취시\n혈압상승을 일으키며\n지속적일 경우\n동맥경화를 유발합니다!</string>

    <!-- 아직 준비중인 기능입니다 -->
    <string name="dialog_not_implement_text">    준비중    </string>

    <string name="activity_settings_terms_description">
        커피매니저 이용약관\n\n본 약관은 2018년 8월 10일부터 적용됩니다.\n\n\n제 1조 목적\n
        이 약관은 주식회사 커피매니저(이하 “회사”)에서 제공하는  제반 서비스(이하 “서비스”)에 접속과 사용자에 의해서 업로드 및 다운로드 되어 표시되는 모든 정보, 텍스트, 이미지 및 기타 자료를 이용하는 이용자(이하 “회원”)와 서비스 이용에 관한 권리 및 의무와 책임사항, 기타 필요한 사항을 규정하는 것을 목적으로 합니다.\n\n
        제 2조 약관의 게시와 효력, 개정\n\n
        1. 회사는 서비스의 가입 과정에 본 약관을 게시합니다.\n\n
        2. 회사는 관련법에 위배되지 않는 범위에서 본 약관을 변경할 수 있습니다.\n

    </string>

    <string name="list_item_notice_fetch_list_error">공지사항을 불러올 수 없습니다\n\n잠시후에 다시 시도해주세요</string>
    <string name="list_item_notice_write_time_example">2019.08.10</string>
    <string name="list_item_notice_title_example">
        [공지] 카페인 입력을 더 쉽게 이용하실 수 있어요!
    </string>

    <string name="list_item_notice_detail_example">
        아래 시간에 서비스 점검이 있을 예정입니다.\n\n
        [작업일시]\n
        2019.08.10 (일) 23:50 ~. 2019.08.11 (월) 00:30 (40분) 전면중단)\n
        [작업내용]\n
        신규 DB서버로 교체 및 서비스 전환 작업\n\n
        해당 작업은 작업상태에 따라 단축되거나 연장될 수도 있어요.\n
        보다 나은 서비스로 커피매니저를 사용하실 수 있도록 노력하겠습니다~\n
        감사합니다!
    </string>

    <string name="home_fragment_today_warning_comment_1">과도한 카페인 섭취는 건강에 좋지 않아요</string>
    <string name="home_fragment_today_warning_comment_2">충분한 수면은 카페인을 줄이는 데 도움이 돼요!</string>
    <string name="home_fragment_today_warning_comment_3">커피 한잔 만들어 주는 사람을 좋아하라</string>
    <string name="home_fragment_today_warning_comment_4">커피 보다는 물을 자주 마시는게 좋아요</string>
    <string name="home_fragment_today_warning_comment_5">이 많은 별빛이 내린 언덕 위에</string>
    <string name="home_fragment_today_warning_comment_6">그대만큼 사랑스러운 사람을 본 일이 없다</string>
    <string name="home_fragment_today_warning_comment_7">너무 맑고 초롱한 그 중 하나 별이여</string>
    <string name="home_fragment_today_warning_comment_8">하늘을 우러러 한 점 부끄럼 없기를</string>
    <string name="home_fragment_today_warning_comment_9">밤에 잠 못잔다면서 또 커피 마시나요?</string>

    <!-- ImageView Description -->
    <string name="image_view_description_choice_franchise_1">1번 프랜차이즈</string>
    <string name="image_view_description_choice_franchise_2">2번 프랜차이즈</string>
    <string name="image_view_description_choice_franchise_3">3번 프랜차이즈</string>
    <string name="image_view_description_choice_franchise_4">4번 프랜차이즈</string>
    <string name="image_view_description_choice_franchise_5">5번 프랜차이즈</string>
    <string name="image_view_description_choice_franchise_6">6번 프랜차이즈</string>
    <string name="image_view_description_choice_franchise_7">7번 프랜차이즈</string>
    <string name="image_view_description_choice_franchise_8">8번 프랜차이즈</string>
    <string name="image_view_description_choice_franchise_9">9번 프랜차이즈</string>
    <string name="image_view_description_choice_franchise_10">10번 프랜차이즈</string>
    <string name="image_view_description_choice_franchise_11">11번 프랜차이즈</string>
    <string name="image_view_description_choice_franchise_12">12번 프랜차이즈</string>
    <string name="image_view_description_choice_franchise_13">13번 프랜차이즈</string>
    <string name="image_view_description_choice_franchise_14">14번 프랜차이즈</string>
    <string name="image_view_description_choice_franchise_15">15번 프랜차이즈</string>
    <string name="image_view_description_choice_franchise_16">16번 프랜차이즈</string>
    <string name="image_view_description_choice_franchise_17">17번 프랜차이즈</string>
    <string name="image_view_description_choice_franchise_18">18번 프랜차이즈</string>
    <string name="image_view_description_choice_franchise_19">19번 프랜차이즈</string>
    <string name="image_view_description_choice_franchise_20">20번 프랜차이즈</string>

    <string name="firebase_message_not_received">파이어베이스 메세지를 수신하지 못했습니다.</string>
    <string name="firebase_default_notification_channel_id">firebase_channel_id</string>

</resources>
