<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/dialog_recent_drink_detail_parent_layout"
    android:orientation="vertical"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:minWidth="248dp"
    android:layout_gravity="center"
    android:gravity="center_horizontal"
    android:padding="32dp"
    android:layout_margin="8dp"
    android:background="@drawable/background_radius_10dp_white_box"
    android:elevation="6dp"
    android:clipToPadding="false">

    <androidx.cardview.widget.CardView
        android:layout_width="102dp"
        android:layout_height="102dp"
        android:layout_marginBottom="16dp"
        app:cardBackgroundColor="@color/background_white_2"
        app:cardCornerRadius="10dp"
        app:cardElevation="4dp">

        <ImageView
            android:id="@+id/dialog_recent_drink_detail_image_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scaleType="centerCrop"
            android:src="@drawable/coffee_sample"/>

        <TextView
            android:id="@+id/dialog_recent_drink_detail_caffeine_indicator"
            android:layout_width="50dp"
            android:layout_height="24dp"
            android:background="@drawable/background_radius_10dp_brown_grey_caffeine_content"
            android:text="0mg"
            android:textSize="12sp"
            android:textColor="@color/color_text_white"
            android:fontFamily="@font/spoqa_han_sans_bold"
            android:gravity="center_horizontal" />

    </androidx.cardview.widget.CardView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/dialog_recent_drink_menu_name"
            android:textColor="@color/color_text_grayish_brown"
            android:textSize="14sp"
            android:gravity="center"
            android:fontFamily="@font/spoqa_han_sans_bold"
            android:includeFontPadding="false" />

        <TextView
            android:id="@+id/dialog_recent_drink_detail_menu_name"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="4dp"
            android:text="아이스 아메리카노"
            android:textSize="14sp"
            android:gravity="center|start"
            android:textColor="@color/color_text_grayish_brown"
            android:fontFamily="@font/spoqa_han_sans_bold"
            android:includeFontPadding="false"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/dialog_recent_drink_franchise_name"
            android:textColor="@color/color_text_grayish_brown"
            android:textSize="14sp"
            android:gravity="center"
            android:fontFamily="@font/spoqa_han_sans_bold"
            android:includeFontPadding="false" />

        <TextView
            android:id="@+id/dialog_recent_drink_detail_franchise_name"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="4dp"
            android:text="스타벅스"
            android:textSize="14sp"
            android:gravity="center|start"
            android:textColor="@color/color_text_grayish_brown"
            android:fontFamily="@font/spoqa_han_sans_bold"
            android:includeFontPadding="false"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/dialog_recent_drink_caffeine"
            android:textColor="@color/color_text_grayish_brown"
            android:textSize="14sp"
            android:gravity="center"
            android:fontFamily="@font/spoqa_han_sans_bold"
            android:includeFontPadding="false" />

        <TextView
            android:id="@+id/dialog_recent_drink_detail_caffeine"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="4dp"
            android:text="120mg"
            android:textSize="14sp"
            android:gravity="center|start"
            android:textColor="@color/color_text_grayish_brown"
            android:fontFamily="@font/spoqa_han_sans_bold"
            android:includeFontPadding="false"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="52dp"
        android:layout_marginTop="21dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/dialog_recent_drink_cancel_button"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_marginEnd="8dp"
            android:background="@drawable/background_radius_10dp_dialog_warning_cancel_button"
            android:text="@string/dialog_recent_drink_cancel_button"
            android:textSize="16sp"
            android:textColor="@color/color_text_dialog_warning_cancel_button"
            android:fontFamily="@font/spoqa_han_sans_bold"
            android:includeFontPadding="false"
            android:stateListAnimator="@null"/>

        <Button
            android:id="@+id/dialog_recent_drink_confirm_button"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/background_radius_10dp_personal_save_button"
            android:text="@string/dialog_recent_drink_confirm_button"
            android:textSize="16sp"
            android:textColor="@color/color_text_white"
            android:fontFamily="@font/spoqa_han_sans_bold"
            android:includeFontPadding="false"
            android:stateListAnimator="@null"/>
    </LinearLayout>

</LinearLayout>