<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/fragment_sign_up_basic_constraint_parent_layout"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/fragment_sign_up_basic_title_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="26dp"
            android:layout_marginTop="24dp"
            android:text="@string/activity_sign_up_title_id"
            android:textColor="@color/color_text_grayish_brown"
            android:textSize="18sp"
            android:fontFamily="@font/spoqa_han_sans_bold"
            android:includeFontPadding="false"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

        <EditText
            android:id="@+id/fragment_sign_up_basic_id_edit_text"
            android:layout_width="match_parent"
            android:layout_height="@dimen/component_edit_text_height"
            android:layout_margin="16dp"
            android:hint="@string/activity_sign_up_title_id"
            android:gravity="center"
            android:textColor="@color/color_text_jade_green"
            android:textSize="18sp"
            android:textCursorDrawable="@drawable/edit_text_cursor_drawable"
            android:maxLines="1"
            android:maxLength="13"
            android:singleLine="true"
            android:inputType="textPersonName"
            android:fontFamily="@font/spoqa_han_sans_bold"
            android:includeFontPadding="false"
            android:background="@drawable/background_radius_10dp_white_box"
            android:elevation="6dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/fragment_sign_up_basic_title_name"/>

        <TextView
            android:id="@+id/fragment_sign_up_basic_title_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="26dp"
            android:layout_marginTop="24dp"
            android:text="@string/activity_sign_up_title_password"
            android:textColor="@color/color_text_grayish_brown"
            android:textSize="18sp"
            android:fontFamily="@font/spoqa_han_sans_bold"
            android:includeFontPadding="false"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/fragment_sign_up_basic_id_edit_text"/>

        <EditText
            android:id="@+id/fragment_sign_up_basic_password_edit_text"
            android:layout_width="match_parent"
            android:layout_height="@dimen/component_edit_text_height"
            android:layout_margin="16dp"
            android:hint="@string/activity_sign_up_title_password_edit_text_hint"
            android:gravity="center"
            android:textColor="@color/color_text_jade_green"
            android:textSize="18sp"
            android:textCursorDrawable="@drawable/edit_text_cursor_drawable"
            android:maxLines="1"
            android:maxLength="13"
            android:singleLine="true"
            android:inputType="textPassword"
            android:fontFamily="@font/spoqa_han_sans_bold"
            android:includeFontPadding="false"
            android:background="@drawable/background_radius_10dp_white_box"
            android:elevation="6dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/fragment_sign_up_basic_title_password"/>

        <TextView
            android:id="@+id/fragment_sign_up_basic_next_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:minWidth="@dimen/component_login_button_width"
            android:minHeight="@dimen/component_login_button_height"
            android:gravity="center"
            android:text="@string/activity_sign_up_next_button_text"
            android:textSize="16sp"
            android:textColor="@color/color_text_white"
            android:fontFamily="@font/spoqa_han_sans_bold"
            android:includeFontPadding="false"
            android:background="@drawable/background_radius_10dp_activity_sign_inactive_button"
            android:elevation="6dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/fragment_sign_up_basic_password_edit_text"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintVertical_bias="0.8"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>